--- a/CloudStorage/DefaultEngine.ini
+++ b/CloudStorage/DefaultEngine.ini
@@ -1,24 +1,41 @@
 [OnlineSubsystemMcp.Xmpp]
-bUseSSL=false
-ServerAddr="ws://127.0.0.1"
-ServerPort=80
+bUseSSL=true
+ServerAddr="wss://xmpp.nexusfn.net:443"
+ServerPort=443
 
 [OnlineSubsystemMcp.Xmpp Prod]
-bUseSSL=false
-ServerAddr="ws://127.0.0.1"
-ServerPort=80
+bUseSSL=true
+ServerAddr="wss://xmpp.nexusfn.net:443"
+ServerPort=443
+
+;Enable double pump for everyone
+[ConsoleVariables]
+;Weapon.TryToFireRestrictedByTypeCooldowns=0
+n.VerifyPeer=0
+FortMatchmakingV2.ContentBeaconFailureCancelsMatchmaking=0
+Fort.ShutdownWhenContentBeaconFails=0
+FortMatchmakingV2.EnableContentBeacon=0
+
+;Glider redeploy? Not working yet iirc
+;Fort.GliderRedeployRequiresJump=1
+;Fort.GliderRedeployUseWindowOfTime=0
+;Fort.GliderRedeployWindowLength=5.0
+;Fort.GliderRedeployPreventSkydiving=1
+
+;Modify gravity
+;[/Script/Engine.PhysicsSettings]
+;DefaultGravityZ=-280.000000
+;DefaultTerminalVelocity=40.000000
+
+;Not sure yet, appears to change graphics somehow
+;[/Script/FortniteGame.FortWorldSettings]
+;DefaultWorldTimeOfDayManager=/Game/TimeOfDay/TODM/MASTER_TODM.MASTER_TODM_C
 
 [OnlineSubsystemMcp.OnlineWaitingRoomMcp]
 bEnabled=false
 ServiceName="waitingroom"
 GracePeriod=300
 RetryConfigUrl="https://s3-us-west-1.amazonaws.com/launcher-resources/waitingroom"
-
-[Voice]
-bEnabled=false
-
-[OnlineSubsystem]
-bHasVoiceEnabled=false
 
 [OnlineSubsystemMcp]
 bUsePartySystemV2=false
@@ -27,46 +44,12 @@ bUsePartySystemV2=false
 bUsePartySystemV2=false
 
 [CrashContextProperties]
-CrashReportClientRichText=NSLOCTEXT("FortGlobals", "FortniteCrashReportClientText", "Fortnite has crashed.")
+CrashReportClientRichText=NSLOCTEXT("FortGlobals", "FortniteCrashReportClientText", "Fortnite has crashed. Please join the Momentum server at https://discord.gg/nexusfn to get support.")
 
 [/Script/Qos.QosRegionManager]
+; Fix ping timeout on mobile and switch
 NumTestsPerRegion=1
-PingTimeout=3.0
-!RegionDefinitions=ClearArray
-+RegionDefinitions=(DisplayName="Auto", RegionId="AutoRegion", bEnabled=true, bVisible=true, bAutoAssignable=true)
-+RegionDefinitions=(DisplayName="Na-East", RegionId="NAE", bEnabled=true, bVisible=true, bAutoAssignable=false)
-+RegionDefinitions=(DisplayName="Na-West", RegionId="NAW", bEnabled=true, bVisible=true, bAutoAssignable=false)
-+RegionDefinitions=(DisplayName="Oceania", RegionId="OCE", bEnabled=true, bVisible=true, bAutoAssignable=false)
-+RegionDefinitions=(DisplayName="Europe", RegionId="EU", bEnabled=true, bVisible=true, bAutoAssignable=false)
-+RegionDefinitions=(DisplayName="Me", RegionId="ME", bEnabled=true, bVisible=true, bAutoAssignable=false)
-+RegionDefinitions=(DisplayName="Brazil", RegionId="BR", bEnabled=true, bVisible=true, bAutoAssignable=false)
-
-[XMPP]
-bEnableWebsockets=true
-
-[LwsWebSocket]
-bDisableCertValidation=true
-
-[/Script/Engine.NetworkSettings]
-n.VerifyPeer=false
-
-[/Script/Qos.QosRegionManager]
-NumTestsPerRegion=1
-PingTimeout=3.0
-
-# Double Pump
-;[ConsoleVariables]
-;Weapon.TryToFireRestrictedByTypeCooldowns=0
-
-;Glider redeploy? Not working???
-;Fort.GliderRedeployRequiresJump=1
-;Fort.GliderRedeployUseWindowOfTime=0
-;Fort.GliderRedeployWindowLength=5.0
-;Fort.GliderRedeployPreventSkydiving=1
-
-;Not sure yet, appears to change graphics somehow
-;[/Script/FortniteGame.FortWorldSettings]
-;DefaultWorldTimeOfDayManager=/Game/TimeOfDay/TODM/MASTER_TODM.MASTER_TODM_C
+PingTimeout=1.0
 
 ;Disable first shot accuracy
 ;[/Script/FortniteGame.FortGlobals]
